tests/ui/invalid_pymethods_buffer.stderr
error: `__getbuffer__` must be `unsafe fn`
  --> tests/ui/invalid_pymethods_buffer.rs:10:8
   |
10 |     fn getbuffer_must_be_unsafe(
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error: `__releasebuffer__` must be `unsafe fn`
  --> tests/ui/invalid_pymethods_buffer.rs:21:8
   |
21 |     fn releasebuffer_must_be_unsafe(&self, _view: *mut pyo3::ffi::Py_buffer) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
